src/test/ui/paren-span.stderr
error[E0616]: field `x` of struct `m::S` is private
  --> $DIR/paren-span.rs:19:12
   |
LL |     paren!(s.x);
   |            ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0616`.
